spend & view secret keys to import/export key dialog

--- a/src/Gui/Common/KeyDialog.ui
+++ b/src/Gui/Common/KeyDialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>585</width>
-    <height>188</height>
+    <height>250</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -19,35 +19,20 @@
   <property name="minimumSize">
    <size>
     <width>585</width>
-    <height>188</height>
+    <height>250</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
     <width>585</width>
-    <height>188</height>
+    <height>300</height>
    </size>
   </property>
   <property name="windowTitle">
    <string>Key</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout">
-   <property name="spacing">
-    <number>0</number>
-   </property>
-   <property name="leftMargin">
-    <number>20</number>
-   </property>
-   <property name="topMargin">
-    <number>20</number>
-   </property>
-   <property name="rightMargin">
-    <number>20</number>
-   </property>
-   <property name="bottomMargin">
-    <number>20</number>
-   </property>
-   <item>
+  <layout class="QGridLayout" name="gridLayout">
+   <item row="0" column="0" colspan="2">
     <widget class="QTextEdit" name="m_keyEdit">
      <property name="minimumSize">
       <size>
@@ -64,9 +49,53 @@
      <property name="frameShape">
       <enum>QFrame::NoFrame</enum>
      </property>
+     <property name="readOnly">
+      <bool>false</bool>
+     </property>
     </widget>
    </item>
-   <item>
+   <item row="1" column="0">
+    <spacer name="verticalSpacer_3">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>10</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item row="2" column="0">
+    <widget class="QLabel" name="m_spendKeyLabel">
+     <property name="text">
+      <string>Spend Secret Key</string>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="1">
+    <widget class="QLineEdit" name="m_spendKeyLineEdit">
+     <property name="readOnly">
+      <bool>false</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="0">
+    <widget class="QLabel" name="m_viewKeyLabel">
+     <property name="text">
+      <string>View Secret Key</string>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="1">
+    <widget class="QLineEdit" name="m_viewKeyLineEdit">
+     <property name="readOnly">
+      <bool>false</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="0">
     <spacer name="verticalSpacer">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
@@ -82,7 +111,7 @@
      </property>
     </spacer>
    </item>
-   <item alignment="Qt::AlignTop">
+   <item row="5" column="0" colspan="2">
     <widget class="WalletGui::WalletSmallGrayTextLabel" name="m_descriptionLabel">
      <property name="text">
       <string/>
@@ -92,7 +121,7 @@
      </property>
     </widget>
    </item>
-   <item>
+   <item row="6" column="0">
     <spacer name="verticalSpacer_2">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
@@ -105,7 +134,7 @@
      </property>
     </spacer>
    </item>
-   <item>
+   <item row="7" column="0" colspan="2">
     <layout class="QHBoxLayout" name="horizontalLayout">
      <property name="spacing">
       <number>6</number>
@@ -242,9 +271,42 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>m_spendKeyLineEdit</sender>
+   <signal>editingFinished()</signal>
+   <receiver>KeyDialog</receiver>
+   <slot>keysChanged()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>337</x>
+     <y>121</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>292</x>
+     <y>124</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>m_viewKeyLineEdit</sender>
+   <signal>editingFinished()</signal>
+   <receiver>KeyDialog</receiver>
+   <slot>keysChanged()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>337</x>
+     <y>147</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>292</x>
+     <y>124</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>fileClicked()</slot>
   <slot>keyChanged()</slot>
+  <slot>keysChanged()</slot>
  </slots>
 </ui>
