--- a/src/Gui/Send/SendFrame.ui
+++ b/src/Gui/Send/SendFrame.ui
@@ -371,7 +371,7 @@
       <item row="0" column="1">
        <widget class="QSpinBox" name="m_mixinSpin">
         <property name="maximum">
-         <number>999999999</number>
+         <number>10</number>
         </property>
        </widget>
       </item>
@@ -406,10 +406,10 @@
          <number>1</number>
         </property>
         <property name="value">
-         <number>7</number>
+         <number>2</number>
         </property>
         <property name="tracking">
-         <bool>false</bool>
+         <bool>true</bool>
         </property>
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
@@ -481,6 +481,11 @@
  </widget>
  <customwidgets>
   <customwidget>
+   <class>WalletGui::WalletTinyLinkLikeButton</class>
+   <extends>QPushButton</extends>
+   <header>Gui/Common/WalletLinkLikeButton.h</header>
+  </customwidget>
+  <customwidget>
    <class>WalletGui::WalletNormalGrayTextLabel</class>
    <extends>QLabel</extends>
    <header>Gui/Common/WalletTextLabel.h</header>
@@ -510,11 +515,6 @@
    <class>WalletGui::WalletExtraNormalBlackTextLabel</class>
    <extends>QLabel</extends>
    <header>Gui/Common/WalletTextLabel.h</header>
-  </customwidget>
-  <customwidget>
-   <class>WalletGui::WalletTinyLinkLikeButton</class>
-   <extends>QPushButton</extends>
-   <header>Gui/Common/WalletLinkLikeButton.h</header>
   </customwidget>
  </customwidgets>
  <tabstops>
